# python-prototype

./: .gitignore  AdvantageScope 1-13-2025.json  AdvantageScope 1-14-2025.json  README.md  glass-window.json  pyproject.toml  robot.py  simgui-ds.json  simgui-window.json  simgui.json  swervemodule.py
.SysId/: sysid-window.json
DriverstationUtils/: keyboard_to_nt.py
HootConvert/: CodesForSignalFiltering.txt  SysIDTunningResults.csv
WPIcal_Archive/: cameracalibration.json  imgui.ini
WPIcal_Archive/AprilTagCameraMountCal/: fiducials-threeTags.json  fiducials.fmap
WPIcal_Archive/Calibrated_Fields/PracticeFieldBlue/: field_calibration-PracticeBluemissing14-15.json  field_calibration.fmap  field_calibration.json
WPIcal_Archive/limelight_setups/: AprilTagLL3_proto.vpr  AptilTagLL4_proto.vpr
WPIcal_Archive/limelight_setups/original/: AprilTag.vpr  protobotPipelineTest.vpr
archive/: driveAtTarget.py  odometry_fuse.py
deploy/pathplanner/: settings.json
deploy/pathplanner/paths/: leftFeed2nearLeftLeft.path  leftFeed2nearLeftRight.path
src/: .gitignore  AdvantageScope 1-21-2025.json  AdvantageScope 1-24-2025.json  AdvantageScope 1-26-2025.json  constants.py  keyboardTest.py  networktables.json  physics.py  pyproject.toml  removeHoot.ps1  robot.py  robotcontainer.py  simgui-ds.json  simgui-window.json  simgui.json  telemetry.py  tuner-project.json
src/.wpilib/: wpilib_preferences.json
src/ShuffleBoard/: shuffleboard.json
src/SmartDashboard/: algaeDashboard.xml
src/WPIcalFieldToUse/: field_calibration-PracticeBluemissing14-15.fmap
src/commands/: ClimbCommand.py  algaeCommand.py  controlPanel.py  coralCommand.py  driveOurOwnWay.py  driveWithForceCommand.py  drive_one_motor.py  drivetrain.py  elevatorCommand.py  gotoClosestPath.py  liftElevator.py  odometrySnap2Line.py  odometry_fuse.py  odometry_snap2Line.py  testDriveCommand.py
src/deploy/pathplanner/: settings.json
src/deploy/pathplanner/autos/: DRIVE PLEASE.auto  Red2-Algae-NoUse_justdoBlue&flip.auto  Test Auto.auto
src/deploy/pathplanner/paths/: B2 to RF2.path  B2 to RF3.path  Dock-Feed-Left.path  Dock-Feed-Right.path  Dock-Proc-Mid.path  Dock-Proc-RtWall.path  Dock-Processor.path  New New Path.path  New Path.path  RF3 to RF3_algae.path  R_2 to RF3.path  Set_right_by_feeder Path.path  Testing Path.path  off RF3_algae to Proc.path
src/robotUtils/: controlAugment.py  pathGenerator.py  pathGeneratorUtil.py
src/subsystems/: ClimbSubsystem.py  ElevatorSubsystem.py  LEDControl.py  algae.py  algaeSubsystem.py  centerVision.py  command_swerve_drivetrain.py  coral.py  coralSubsystem.py  coraldischarge.py  limelight.py  limelightSubsystem.py  oneMotor.py  photonvision.py  pneumaticSubsystem.py  trackdischarge.py  ultrasonic.py  ultrasonics.py
