[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TEAM2556-Python"
version = "0.2.0"
description = "FRC Robot Project using Python, PyRobot, and WPILib"
authors = [
    { name="Team2556", email="team2556@gmail.com" }
]
dependencies = [
    "wpilib", #really need?
    "robotpy",
    "mypy",
    'limelightlib-python',
    
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.2.1.0"#"2025.1.1.1"#"2024.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
# fomr PyPi: Provides-Extra: apriltag, commands2, cscore, navx, pathplannerlib, phoenix6, rev, romi, sim, xrp, all
robotpy_extras = [
<<<<<<<<< Temporary merge branch 1
    # "all",
    "apriltag",
    "commands2",
    "cscore",
    "navx",
    "pathplannerlib",
    "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    "rev",
    # "romi",
    "sim",
    # "xrp",
    #not available:
    # "ntcore"
    # "phoenix5",
    "ctre",
    # "opencv",
]

# Other pip packages to install on the roboRIO
requires = [
    "phoenix6~=25.1",
    'numpy',
    'limelightlib-python',
    # 'opencv-python',
    #'scipy'
    'pynetworktables',
    'pyfrc',
    # 'robotpy-hal-sim',
    #'robotpy-wpilib',
    #'robotpy-wpiutil',
    'robotpy-ctre',
    # 'robotpy-opencv'
    #'robotpy-rev',


]