[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TEAM2556-Python"
version = "0.2.2"
description = "FRC Robot Project using Python, PyRobot, and WPILib"
authors = [
    { name="Team2556", email="team2556@gmail.com" }
]
dependencies = [
    "wpilib", #really need?
    "robotpy",
    "mypy",
    'limelightlib-python',
    'keyboard',
    'robotpy[apriltag]', 
    'robotpy[commands2]', 
    'robotpy[cscore]', 
    'robotpy[navx]', 
    'robotpy[pathplannerlib]', 
    'robotpy[rev]', 
    'robotpy[sim]',
    "phoenix6",#~=25.2",
    # "numpy==2.2.1.dev0; platform_machine == 'roborio'",#'numpy',
    'limelightlib-python',
    'photonlibpy',
    'robotpy-apriltag',
    # 'opencv-python',
    #'scipy'
    'pynetworktables',
    'pyfrc',
    # 'pyserial',
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.3.1.1"#"2025.2.1.0"#"2025.1.1.1"#"2024.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
# fomr PyPi: Provides-Extra: apriltag, commands2, cscore, navx, pathplannerlib, phoenix6, rev, romi, sim, xrp, all
robotpy_extras = [
    # "all",
    "apriltag",
    "commands2",
    "cscore",
    "navx",
    "pathplannerlib",
    # "phoenix6", # conflicts with the version specifier below ~25.2
    # "photonvision",says doesnt have: WARNING: robotpy 2025.2.1.0 does not provide the extra 'photonvision'
    # "playingwithfusion",
    "rev",
    # "romi",
    "sim",
    # "xrp",
    #not available:
    # "ntcore"
    # "phoenix5",
    # "ctre",
    # "opencv",
]


# Other pip packages to install on the roboRIO
requires = [
    "phoenix6",#~=25.2",
    "numpy==2.2.1.dev0; platform_machine == 'roborio'",#'numpy',
    'limelightlib-python',
    'photonlibpy',
    'robotpy-apriltag',
    # 'opencv-python',
    #'scipy'
    'pynetworktables',
    'pyfrc',
    # 'pyserial',
    


    # 'robotpy-ctre',# conflicts with the version specifier below phoenix6~25.2
    
    # 'robotpy-hal-sim',
    #'robotpy-wpilib',
    #'robotpy-wpiutil',
    # 'robotpy-opencv'
    #'robotpy-rev',


]